# HW_12.2_pytest

./: pyproject.toml
tests/: test_arrs.py
