[tool.poetry]
name = "pytest-proj12-2"
version = "0.1.0"
description = ""
authors = ["Vlad Morozov <v@morosoff.ru>"]
readme = "README.md"
packages = [{include = "pytest_proj12"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
